# DiskDB

./: .gitignore  BUILD_SUMMARY.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  Makefile  OPTIMIZATION_SUMMARY.md  PERFORMANCE_REPORT.md  README.md  TESTING_GUIDE.md  TEST_REPORT.md  build.rs  dockerfile  quick_test.py  test_diskdb_client.py
benches/: core_operations.rs  memory_pool.rs  memory_usage.rs  network_io.rs  optimization_comparison.rs  parser_comparison.rs  protocol_parsing.rs  simple_comparison.rs
benchmark_results/: baseline_report.md  baseline_summary.json  c_parser_performance.md  optimization_summary.md  raw_baseline_data.txt
builds/diskdb-0.1.0-macos-aarch64/: README.md
clients/: PYTHON_CLIENT_REPORT.md  connection_test.py  diskdb_client.py  diskdb_client_v2.py  golang_adapter.go  python_adapter.py  quick_test.py  test_all_datatypes.py  test_go_client.go
clients/diskdb/: IDENTITY  LOG
clients/python/: MANIFEST.in  README.md  benchmark_baseline.py  examples.py  requirements.txt  setup.py  test_diskdb.py
clients/python/diskdb/: client.py
clients/python/diskdb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
diskdb/: 000008.sst  000027.sst  000029.sst  IDENTITY  LOG  LOG.old.1749189715278397  LOG.old.1749189758911615  LOG.old.1749189950651031  LOG.old.1749190090371625  LOG.old.1749195338497592  MANIFEST-000018  OPTIONS-000007
examples/: parser_benchmark.rs  parser_benchmark_c.rs
mydb/: IDENTITY  LOG  OPTIONS-000007
scripts/: run_baseline_benchmarks.sh
shared/: info.txt
src/: config.rs  connection.rs  data_types.rs  data_types_pooled.rs  db.rs  error.rs  legacy.rs  lib.rs  main.rs  optimized_server.rs  protocol.rs  server.rs  tls.rs
src/client/: connection_pool.rs  mod.rs  optimized_client.rs
src/commands/: get.rs  mod.rs  set.rs
src/ffi/: memory.rs  mod.rs  parser.rs
src/native/: CMakeLists.txt
src/native/include/: arena.h  memory_pool.h  parser.h
src/native/src/: arena.c  memory_pool.c  parser.c  slab_allocator.c
src/network/: buffer_pool.rs  io_uring_server.rs  mod.rs  optimized_connection.rs
src/storage/: mod.rs  rocksdb_storage.rs
static/: info.txt
tests/: data_types_test.rs  integration_test.rs  memory_leak_tests.rs  mod.rs  optimization_test.rs  parser_performance_test.rs  performance_comparison.rs  performance_tests.rs  quick_performance_test.rs  redis_diskdb_comparison.py  security_tests.rs  simple_perf_test.rs  stress_tests.rs
