[package]
name = "diskdb"
version = "0.1.0"
edition = "2021"

[dependencies]
rocksdb = "0.21.0"
tokio = { version = "1.0", features = ["full"] }
sha2 = "0.9.8"
native-tls = "0.2.8"
tokio-native-tls = "0.3.0"
log = "0.4.14"
env_logger = "0.9.0"
num_cpus = "1.13.0"
async-trait = "0.1.74"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
